--- a/xpi/content/css/win8/back-forwardextra.css
+++ b/xpi/content/css/win8/back-forwardextra.css
@@ -13,14 +13,10 @@
 	  transition: none !important;
 	}
 
-	#main-window[defaultfxtheme="true"] #notification-popup-box[hidden] + * {
-	  -moz-padding-start: 2px !important;
-	  transition: none !important;
-	}
-	
 	#main-window[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 6px !important;
 	  -moz-padding-end: 5px !important;
+	  transition: none !important;
 	}
 
 	#main-window[defaultfxtheme="true"] #notification-popup-box:not([hidden]) {
@@ -99,14 +95,14 @@
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
 
-	#main-window #urlbar-container > #urlbar-wrapper > #urlbar,
-	#main-window #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
+	#main-window toolbox toolbar  #urlbar-container > #urlbar-wrapper > #urlbar,
+	#main-window toolbox toolbar  #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
 	  margin-left: 8px !important;
 	}
 	
 	@media (-moz-os-version: windows-win10) {
-		#main-window #urlbar-container > #urlbar-wrapper > #urlbar,
-		#main-window #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
+		#main-window toolbox toolbar  #urlbar-container > #urlbar-wrapper > #urlbar,
+		#main-window toolbox toolbar  #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
 		  margin-left: 10px !important;
 		}
 	}
