--- a/xpi/content/css/winxp/back-forwardextra.css
+++ b/xpi/content/css/winxp/back-forwardextra.css
@@ -13,14 +13,10 @@
 	  transition: none !important;
 	}
 
-	#main-window[defaultfxtheme="true"] #notification-popup-box[hidden] + * {
-	  -moz-padding-start: 5px !important;
-	  transition: none !important;
-	}
-
 	#main-window[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 6px !important;
 	  -moz-padding-end: 5px !important;
+	  transition: none !important;
 	}
 
 	#main-window[defaultfxtheme="true"] #notification-popup-box:not([hidden]) {
@@ -56,8 +52,8 @@
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
 	
-	#main-window #urlbar-container > #urlbar-wrapper > #urlbar,
-	#main-window #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
+	#main-window toolbox toolbar  #urlbar-container > #urlbar-wrapper > #urlbar,
+	#main-window toolbox toolbar  #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
 	  margin-left: 8px !important;
 	}
 }
