--- a/xpi/content/css/linux/back-forwardextra.css
+++ b/xpi/content/css/linux/back-forwardextra.css
@@ -16,14 +16,18 @@
 	#main-window #urlbar-container[forwarddisabled] > #urlbar-wrapper {
       -moz-padding-start: 8px !important;
 	}
+	
+	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
+	  margin-inline-start: -6px !important;
+	}
 		
-	#main-window[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+	#main-window:not([fx50plus="true"])[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 6px !important;
 	  -moz-padding-end: 5px !important;
 	  transition: none !important;
 	}
 
-	* #notification-popup-box:not([hidden]) {
+	#main-window:not([fx50plus="true"]) * #notification-popup-box:not([hidden]) {
 	  padding-left:2px !important;
 	  padding-right:2px !important;
 	  transition: none !important;
