--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -1,18 +1,25 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#nav-bar #notification-popup-box + *{
+	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
+	  margin-inline-start: -9px !important;
+	} 
+	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button + #urlbar > * {
+	  transition: none !important;
+	}
+
+	#main-window:not([fx50plus="true"]) #nav-bar #notification-popup-box + *{
 	  -moz-padding-start: 9px !important;
 	  transition: none !important;
 	}
 
-	#main-window[defaultfxtheme="true"] #navigator-toolbox #nav-bar #urlbar-container #notification-popup-box[hidden] + *,
-	#main-window #navigator-toolbox #nav-bar #urlbar-container #notification-popup-box[hidden] + * {
+	#main-window:not([fx50plus="true"])[defaultfxtheme="true"] #navigator-toolbox #nav-bar #urlbar-container #notification-popup-box[hidden] + *,
+	#main-window:not([fx50plus="true"]) #navigator-toolbox #nav-bar #urlbar-container #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 4px !important;
 	  -moz-padding-end: 3px !important;
 	  transition: none !important;
 	}
 
-	#nav-bar #notification-popup-box:not([hidden]) {
+	#main-window:not([fx50plus="true"]) #nav-bar #notification-popup-box:not([hidden]) {
 	  padding-left:2px !important;
 	  padding-right:2px !important;
 	  transition: none !important;
