--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -1,8 +1,9 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
 
 	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
-	  margin-inline-start: -9px !important;
-	} 
+	  margin-inline-start: -6px !important;
+	}
+
 	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button + #urlbar > * {
 	  transition: none !important;
 	}
@@ -25,6 +26,15 @@
 	  transition: none !important;
 	}
 	
+	@media (-moz-os-version: windows-win10) {
+	  #main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
+		margin-inline-start: -9px !important;
+	  }
+	  #main-window:not([fx50plus="true"])[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+		-moz-padding-start: 4px !important;
+	  }
+	}
+	
     #nav-bar #urlbar-container > #urlbar-wrapper > #urlbar,
 	#nav-bar #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
       margin-left: 4px !important; /* has to be this for ltr and rtl locales */
@@ -43,7 +53,7 @@
 	
 	@media (max-resolution: 1.0dppx) {
 		#main-window #navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon{
-		  padding: 3px 0px !important;
+		  padding: 2px 0px !important; /*3 0*/
 		  margin: 0px 0px !important;
 		  margin: 0px 0px !important;
 		}
@@ -293,10 +303,6 @@
 	
 	/* Windows 10 tweaks */
 	@media (-moz-os-version: windows-win10) {
-
-		/*#main-window[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
-		  -moz-padding-start: 4px !important;
-		}*/
 
 		#urlbar-wrapper, #urlbar,
 		.searchbar-textbox{
