--- a/xpi/content/css/close_icon_t_w7v2.css
+++ b/xpi/content/css/close_icon_t_w7v2.css
@@ -4,19 +4,16 @@
 
 	/* Tabs toolbar tab close button (Fx31+) */
 	#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button,
-	#navigator-toolbox #TabsToolbar #tabs-closebutton,
-	#navigator-toolbox #TabsToolbar #ctraddon_tabs-closebutton{
+	#navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton) {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/close_w7v2.png") !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
 	#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button:hover,
-	#navigator-toolbox #TabsToolbar #tabs-closebutton:hover,
-	#navigator-toolbox #TabsToolbar #ctraddon_tabs-closebutton:hover{
+	#navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover {
 	  -moz-image-region: rect(0, 32px, 16px, 16px) !important;
 	}
 	#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button:hover:active,
-	#navigator-toolbox #TabsToolbar #tabs-closebutton:hover:active,
-	#navigator-toolbox #TabsToolbar #ctraddon_tabs-closebutton:hover:active {
+	#navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover:active {
 	  -moz-image-region: rect(0, 48px, 16px, 32px) !important;
 	}
 	
