--- a/xpi/content/css/panelmenucolor.css
+++ b/xpi/content/css/panelmenucolor.css
@@ -3,7 +3,9 @@
 @-moz-document url(chrome://browser/content/browser.xul){
 	.panel-arrowcontent,
 	.panel-subviews,
-	#BMB_bookmarksPopup menupopup box {
+	#BMB_bookmarksPopup menupopup box,
+	#ctraddon_BMB_bookmarksPopup[panelopen="true"] menupopup[placespopup=true] > hbox,
+	#ctraddon_BMB_bookmarksPopup[panelopen="true"] #ctraddon_BMB_subscribeToPageSubmenuMenupopup {
 	  background: linear-gradient(white, -moz-dialog 30px) !important;    
 	}
 }
