--- a/xpi/content/css/mac/smallnavbutextra.css
+++ b/xpi/content/css/mac/smallnavbutextra.css
@@ -112,9 +112,9 @@
                   0 0 2px hsla(210,54%,20%,.1) !important;
 	}
 
-	#navigator-toolbox #nav-bar #urlbar-container {
-	  -moz-margin-start: 0px !important;
-	}
+	/*#navigator-toolbox #nav-bar #urlbar-container {
+	  -moz-margin-start: 2px !important;
+	}*/
 	
 	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
 	  margin-inline-start: -6px !important;
@@ -134,9 +134,9 @@
 	  transition-delay: 0s !important;
 	}
 
-	#nav-bar #urlbar-container > #urlbar-wrapper > #urlbar,
-	#nav-bar #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
-	  margin-left: 4px !important; /* for both ltr and rtl*/
+	/*toolbar*/ #urlbar-container /*> #urlbar-wrapper > #urlbar*/,
+	/*toolbar*/ #urlbar-container[forwarddisabled] /*> #urlbar-wrapper > #urlbar*/ {
+	  -moz-margin-start: 4px !important;
 	}
 	
 	#main-window #navigator-toolbox #nav-bar #urlbar-wrapper {
