--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -35,9 +35,13 @@
 	  }
 	}
 	
+    #nav-bar #urlbar-container/* > #urlbar-wrapper > #urlbar*/,
+	#nav-bar #urlbar-container[forwarddisabled]/* > #urlbar-wrapper > #urlbar*/ {
+	  -moz-margin-start: 2px !important;
+	}
+	
     #nav-bar #urlbar-container > #urlbar-wrapper > #urlbar,
 	#nav-bar #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
-      margin-left: 4px !important; /* has to be this for ltr and rtl locales */
       transition: none !important;
       transition-property: none !important;
       transition-delay: 0s !important;
@@ -69,15 +73,15 @@
 		}
 	}
 
-	/* Fx31+*/
 	#main-window #navigator-toolbox #nav-bar:-moz-locale-dir(ltr) #forward-button{
       margin-left: 4px !important;
+	  margin-right: 4px !important;
 	}
 	#main-window #navigator-toolbox #nav-bar:-moz-locale-dir(rtl) #forward-button{
-      margin-left: 6px !important;
+      margin-left: 4px !important;
+	  margin-right: 4px !important;
 	}
-	/**/
-	
+
 	@media (-moz-os-version: windows-win10) {
 	  @media (max-resolution: 1.0dppx) {
 		#main-window #navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon{
