--- a/xpi/content/css/win8/back-forwardextra.css
+++ b/xpi/content/css/win8/back-forwardextra.css
@@ -101,15 +101,15 @@
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
 
-	#main-window toolbox toolbar  #urlbar-container > #urlbar-wrapper > #urlbar,
-	#main-window toolbox toolbar  #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
-	  margin-left: 8px !important;
+	#main-window toolbox toolbar  #urlbar-container/* > #urlbar-wrapper > #urlbar*/,
+	#main-window toolbox toolbar  #urlbar-container[forwarddisabled] /*> #urlbar-wrapper > #urlbar*/ {
+	  -moz-margin-start: 10px !important;
 	}
-	
+
 	@media (-moz-os-version: windows-win10) {
-		#main-window toolbox toolbar  #urlbar-container > #urlbar-wrapper > #urlbar,
-		#main-window toolbox toolbar  #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar {
-		  margin-left: 10px !important;
+		#main-window toolbox toolbar  #urlbar-container /*> #urlbar-wrapper > #urlbar*/,
+		#main-window toolbox toolbar  #urlbar-container[forwarddisabled]/* > #urlbar-wrapper > #urlbar*/ {
+		  -moz-margin-start: 12px !important;
 		}
 	}
 
