--- a/xpi/content/css/back-forward.css
+++ b/xpi/content/css/back-forward.css
@@ -13,7 +13,15 @@
 	  display:none !important;
 	}
 	
-	#urlbar-container *{
+    window:not([chromehidden~="toolbar"]) toolbar #urlbar-wrapper,
+	#urlbar-container,
+	#urlbar-container *,
+	#urlbar-wrapper,
+	#urlbar-wrapper *,
+	#urlbar,
+	#urlbar *,
+	#nav-bar * .toolbarbutton-icon,
+	#nav-bar * {
 	  clip-path: none !important;
 	}
 	
