--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -17,8 +17,8 @@
 	  transition-property:  none !important;
 	  transition-delay: 0s !important;
 	}
-	#nav-bar #urlbar-container /*> #urlbar-wrapper > #urlbar*/,
-	#nav-bar #urlbar-container[forwarddisabled] /*> #urlbar-wrapper > #urlbar*/ {
+	#nav-bar #urlbar-container,
+	#nav-bar #urlbar-container[forwarddisabled] {
 	  margin-left: 1px !important;
 	}
 	
@@ -71,7 +71,12 @@
 	  transition: none !important;
 	}
 
-    #nav-bar * .toolbarbutton-icon,
+    #urlbar-container,
+	#urlbar-container *,
+	#urlbar-wrapper,
+	#urlbar,
+	#urlbar *,
+	#nav-bar * .toolbarbutton-icon,
 	#nav-bar * {
 	  clip-path: none !important;
 	}
