--- a/xpi/content/css/mac/back-forwardextra.css
+++ b/xpi/content/css/mac/back-forwardextra.css
@@ -28,8 +28,8 @@
 	  transition: none !important;
 	}
 	
-	#main-window toolbox toolbar #urlbar-container /*> #urlbar-wrapper > #urlbar*/,
-	#main-window toolbox toolbar #urlbar-container[forwarddisabled] /*> #urlbar-wrapper > #urlbar*/ {
+	#main-window * toolbar #urlbar-container ,
+	#main-window * toolbar #urlbar-container[forwarddisabled]  {
 	  -moz-margin-start: 8px !important;
 	}
 
