--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -442,6 +442,8 @@
 	#ctraddon_BMB_viewBookmarksToolbar {
 	  display:none;
 	}
+	
+	#ctraddon_BMB_unsortedBookmarks_mm2sep,
 	#ctraddon_BMB_viewBookmarksToolbar + menuseparator {
 	  visibility: collapse;
 	}
