--- a/xpi/content/css/bmbut_bmbnounsort.css
+++ b/xpi/content/css/bmbut_bmbnounsort.css
@@ -11,6 +11,7 @@
 	  display:none !important;
 	}
 	
+	#main-window[fx48plus="true"] #bookmarksMenuPopup #ctraddon_BMB_unsortedBookmarks_mm2sep,
 	#ctraddon_BMB_bookmarksPopup .hide-if-empty-places-result,
 	#bookmarksMenuPopup .hide-if-empty-places-result {
 	  visibility: collapse !important;
