--- a/xpi/content/css/alt_autocompl_items.css
+++ b/xpi/content/css/alt_autocompl_items.css
@@ -20,5 +20,29 @@
 	  border-top: 1px solid transparent !important;
 	  border-bottom: 1px solid transparent !important;
 	}
+	
+	@media not all and (-moz-windows-classic) {
+	
+		panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem:not([collapse="true"]),
+		#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem:not([collapse="true"]) {
+		  margin: 0px 4px 0px 4px !important;
+		}
+
+		panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem:not([collapse="true"]):nth-of-type(2),
+		#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem:not([collapse="true"]):nth-of-type(2) {
+		  margin: 4px 4px 0px 4px !important;
+		}
+
+		panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem:not([collapse="true"]):last-of-type,
+		#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem:not([collapse="true"]):last-of-type {
+		  margin: 0px 4px 4px 4px !important;
+		}
+
+		panel[type="autocomplete-richlistbox"] .autocomplete-richlistbox,
+		#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistbox {
+		  padding: 0 !important;
+		}
+		
+	}
 
 }
