--- a/xpi/content/css/alt_autocompl_items2.css
+++ b/xpi/content/css/alt_autocompl_items2.css
@@ -29,5 +29,25 @@
 	  border-top: 1px solid transparent !important;
 	  border-bottom: 1px solid transparent !important;
 	}
-
+	
+	panel[type="autocomplete-richlistbox"] .autocomplete-richlistbox,
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistbox {
+	  transition: unset !important;
+	}
+	
+	panel[type="autocomplete-richlistbox"] .autocomplete-richlistbox[style="height: 0px;"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistbox[style="height: 0px;"],
+	panel[type="autocomplete-richlistbox"] .autocomplete-richlistbox[style="height: 8px;"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistbox[style="height: 8px;"] {
+	  padding-top: 0 !important;
+	  padding-bottom: 0 !important;
+	  margin-bottom: -1px !important;
+	  min-width: 0 !important;
+      width: 0 !important;
+      max-width: 0 !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+	}
 }
