--- a/xpi/content/css/urlbar_results.css
+++ b/xpi/content/css/urlbar_results.css
@@ -5,6 +5,7 @@
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistbox {
 	  max-height: unset !important;
 	  height: auto !important;
+	  transition: unset !important;
 	}
 
 }
