--- a/xpi/content/css/empty_favicon_pt.css
+++ b/xpi/content/css/empty_favicon_pt.css
@@ -1,8 +1,10 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 @-moz-document url(chrome://browser/content/browser.xul) {
 	
-	.tabbrowser-tab[pinned] .tab-text,
 	.tabbrowser-tab[pinned] .tab-icon-image:not([src]) {
+	   visibility: hidden !important;
+	}
+	.tabbrowser-tab[pinned] .tab-text {
 	  display:none !important;
 	}
 
